# training-api-rest-crud

./: README.md  example01.py  pokemons.db  pyproject.toml
src/: main.py
src/core/: db.py  models.py
src/seeds/: pokemon.py
